--- a/public/css/material.css
+++ b/public/css/material.css
@@ -174,6 +174,8 @@ body {
   margin: 0;
   padding: 0;
   height: 100%;
+  max-width: 100%;
+  overflow-x: hidden;
 }
 
 body {
